objects/RIC_Article__c.object
<CustomObject>
    <fields>
        <fullName>RIC_Tarif_de_Base_N_1__c</fullName>
        <label>Tarif de Base N+1</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RIC_Tarif_de_base_N__c</fullName>
        <label>Tarif de Base N</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RIC_Tarif_specifique_N_1__c</fullName>
        <label>Tarif spécifique N+1</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RIC_Tarif_specifique_N__c</fullName>
        <label>Tarif spécifique N</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RIC_Tarification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tarification</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>00_UM</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06Rn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Taux_tarif_D_N_1__c</fullName>
        <label>Taux tarif D N+1</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Taux_tarif_D_N__c</fullName>
        <label>Taux tarif D N</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Taux_tarif_F_N_1__c</fullName>
        <label>Taux tarif F N+1</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Taux_tarif_F_N__c</fullName>
        <label>Taux tarif F N</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Taux_tarif_N_N_1__c</fullName>
        <label>Taux tarif N N+1</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Taux_tarif_N_N__c</fullName>
        <label>Taux tarif N N</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Taux_tarif_P_N_1__c</fullName>
        <label>Taux tarif P N+1</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Taux_tarif_P_N__c</fullName>
        <label>Taux tarif P N</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Taux_tarif_R_N_1__c</fullName>
        <label>Taux tarif R N+1</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Taux_tarif_R_N__c</fullName>
        <label>Taux tarif R N</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Taxe_emballage_Adelphe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Taxe emballage Adelphe</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>56_TA</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06PI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Tech_LockDateTIme__c</fullName>
        <label>RIC_Tech_LockDateTIme</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RIC_Tech_LockingUser__c</fullName>
        <label>RIC_Tech_LockingUser</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Tech_isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RIC_Tech_isLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Texte_recherche__c</fullName>
        <description>Alias JDE = SRTX</description>
        <label>Texte recherche</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Top_Catalogue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top Catalogue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Top_symbolisation_Y56TS01__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Alias JDE = Y56TS01</description>
        <label>Top symbolisation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Top_symbolisation_Y56TS02__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Alias JDE = Y56TS02</description>
        <label>Top symbolisation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Top_symbolisation_Y56TS03__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Alias JDE = Y56TS03</description>
        <label>Top symbolisation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Tranches_T1_N_1__c</fullName>
        <label>Tranches T1 N+1</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Tranches_T1_N__c</fullName>
        <label>Tranches T1 N</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Tranches_T2_N_1__c</fullName>
        <label>Tranches T2 N+1</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Tranches_T2_N__c</fullName>
        <label>Tranches T2 N</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Tranches_T3_N_1__c</fullName>
        <label>Tranches T3 N+1</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Tranches_T3_N__c</fullName>
        <label>Tranches T3 N</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Type_EAN_TEAN01__c</fullName>
        <label>Type d&apos;EAN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BRI  - CODE_COUPON_BRI</fullName>
                </value>
                <value>
                    <fullName>EAN13- EAN_UCC_13_SYMBOL</fullName>
                </value>
                <value>
                    <fullName>EAN14- ITF_14_SYMBOL</fullName>
                </value>
                <value>
                    <fullName>EAN8 - EAN_UCC_8_SYMBOL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Type_EAN_TEAN02__c</fullName>
        <label>Type d&apos;EAN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BRI  - CODE_COUPON_BRI</fullName>
                </value>
                <value>
                    <fullName>EAN13 - EAN_UCC_13_SYMBOL</fullName>
                </value>
                <value>
                    <fullName>EAN14 - ITF_14_SYMBOL</fullName>
                </value>
                <value>
                    <fullName>EAN8 - EAN_UCC_8_SYMBOL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Type_EAN_TEAN03__c</fullName>
        <label>Type d&apos;EAN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BRI  - CODE_COUPON_BRI</fullName>
                </value>
                <value>
                    <fullName>EAN13 - EAN_UCC_13_SYMBOL</fullName>
                </value>
                <value>
                    <fullName>EAN14 - ITF_14_SYMBOL</fullName>
                </value>
                <value>
                    <fullName>EAN8 - EAN_UCC_8_SYMBOL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Type_Remplacement__c</fullName>
        <label>Type Remplacement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DR	- Remplacement définitif</fullName>
                </value>
                <value>
                    <fullName>FC	- Promo Dont Gratuit</fullName>
                </value>
                <value>
                    <fullName>FG	- Promo Objet</fullName>
                </value>
                <value>
                    <fullName>FQ	- Promo Prix</fullName>
                </value>
                <value>
                    <fullName>PO	- Promo avec objet</fullName>
                </value>
                <value>
                    <fullName>PP	- Promo avec incidence sur Prix</fullName>
                </value>
                <value>
                    <fullName>PQ	- Promo avec incidence/quantité</fullName>
                </value>
                <value>
                    <fullName>SP	- Promo Presentation Speciale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Type_UL2__c</fullName>
        <formula>LEFT(TEXT( RIC_Type_UL_Y56TU02__c ),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code type UL 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Type_UL3__c</fullName>
        <formula>LEFT(TEXT( RIC_Type_UL_Y56TU03__c ),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code type UL 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Type_UL_Y56TU02__c</fullName>
        <label>Type d&apos;UL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00 - Colis de détail</fullName>
                </value>
                <value>
                    <fullName>01 - Roll, box</fullName>
                </value>
                <value>
                    <fullName>02 - Colis (carton, fardeau)</fullName>
                </value>
                <value>
                    <fullName>03 - Palette</fullName>
                </value>
                <value>
                    <fullName>04 - Demie palette</fullName>
                </value>
                <value>
                    <fullName>05 - Quart de palette</fullName>
                </value>
                <value>
                    <fullName>06 - Couche palette</fullName>
                </value>
                <value>
                    <fullName>07 - Sous conditionnement SPCB</fullName>
                </value>
                <value>
                    <fullName>08 - Demi-box</fullName>
                </value>
                <value>
                    <fullName>09 - Promotainer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Type_UL_Y56TU03__c</fullName>
        <label>Type d&apos;UL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00 - Colis de détail</fullName>
                </value>
                <value>
                    <fullName>01 - Roll, box</fullName>
                </value>
                <value>
                    <fullName>02 - Colis (carton, fardeau)</fullName>
                </value>
                <value>
                    <fullName>03 - Palette</fullName>
                </value>
                <value>
                    <fullName>04 - Demie palette</fullName>
                </value>
                <value>
                    <fullName>05 - Quart de palette</fullName>
                </value>
                <value>
                    <fullName>06 - Couche palette</fullName>
                </value>
                <value>
                    <fullName>07 - Sous conditionnement SPCB</fullName>
                </value>
                <value>
                    <fullName>08 - Demi-box</fullName>
                </value>
                <value>
                    <fullName>09 - Promotainer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Type_alc_pdt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type alcool ou produit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_S5</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06Pc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Type_d_OPP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type d&apos;OPP</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>56_02</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipLabel>RIC Articles (Type d&apos;OPP)</relationshipLabel>
        <relationshipName>RIC_Articles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Type_d_impression__c</fullName>
        <label>Type d&apos;impression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Type_de_Protection__c</fullName>
        <label>Type de Protection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AVRF</fullName>
                </value>
                <value>
                    <fullName>Protection magnétique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Type_de_capsule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type de capsule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>56_HC</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipLabel>RIC Articles (Type de capsule)</relationshipLabel>
        <relationshipName>RIC_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Type_de_palette__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type de palette</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>56_PA</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06Pm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Type_de_produit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type de produit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_C</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06Q1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Type_demballage__c</fullName>
        <label>Type d&apos;emballage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>002</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Type_emballage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type emballage</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>56_TY</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipLabel>RIC Articles (Type emballage)</relationshipLabel>
        <relationshipName>Articles56TY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Type_ligne__c</fullName>
        <description>Alias JDE = LNTY</description>
        <label>Type ligne</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Type_of_Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type article</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_I</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06PS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Typologie_planification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Typologie Planification</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_08</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06QB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_UM_Poids__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UM Poids</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>00_UM</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06QV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_UM_Prix_Cession__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UM Prix de cession</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>00_UM</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06Qf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Unite_de_mesure_CS__c</fullName>
        <label>Unité de mesure CS</label>
        <precision>13</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Unite_de_mesure_UML1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unité de mesure</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>00_UM</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06Qz</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Unite_de_mesure_UML2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unité de mesure</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>00_UM</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06R9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Unite_de_mesure_UML3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unité de mesure</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>00_UM</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06RJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Unite_de_mesure_UOM1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unité mesure</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>00_UM</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06RT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Unite_de_mesure_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unité de mesure</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>00_UM</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06Rd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Unite_de_mesure_UR__c</fullName>
        <label>Unité de mesure UR</label>
        <precision>13</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_VAP_Picklist__c</fullName>
        <label>VAP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_VAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Variable_logistique_Y56VL02__c</fullName>
        <label>Variable logistique</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Variable_logistique_Y56VL03__c</fullName>
        <label>Variable logistique</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Ventes_Stock__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ventes/Stock</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>40_CM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Vignette__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cocher si soumis à vignette</inlineHelpText>
        <label>Vignette</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Visuel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visuel</label>
        <type>Checkbox</type>
    </fields>
    <label>RIC Article</label>
    <listViews>
        <fullName>RIC_A_creer</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code_Article__c</columns>
        <columns>RIC_Project__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>RIC_Statut__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_Statut__c</field>
            <operation>equals</operation>
            <value>A créer partiellement,A créer</value>
        </filters>
        <label>A créer</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_All</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code_Article__c</columns>
        <columns>RIC_Project__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>RIC_Statut__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_a_finaliser</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code_Article__c</columns>
        <columns>RIC_Project__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>RIC_Statut__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_Statut__c</field>
            <operation>equals</operation>
            <value>A finaliser</value>
        </filters>
        <label>A finaliser</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_cree</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code_Article__c</columns>
        <columns>RIC_Project__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>RIC_Statut__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_Statut__c</field>
            <operation>equals</operation>
            <value>Créé</value>
        </filters>
        <label>Créé</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RIC Articles</pluralLabel>
    <recordTypes>
        <fullName>MPA</fullName>
        <active>true</active>
        <label>MPA</label>
    </recordTypes>
    <recordTypes>
        <fullName>RIC_Kit_OPP_Pernod</fullName>
        <active>true</active>
        <label>Kit OPP Pernod</label>
    </recordTypes>
    <recordTypes>
        <fullName>RIC_Kit_OPP_Ricard</fullName>
        <active>true</active>
        <label>Kit OPP Ricard</label>
    </recordTypes>
    <recordTypes>
        <fullName>RIC_MPC</fullName>
        <active>true</active>
        <label>MPC</label>
    </recordTypes>
    <recordTypes>
        <fullName>RIC_OPP_Pernod</fullName>
        <active>true</active>
        <label>Kit ou OPP acheté Pernod</label>
    </recordTypes>
    <recordTypes>
        <fullName>RIC_OPP_Ricard</fullName>
        <active>true</active>
        <label>Kit ou OPP acheté Ricard</label>
    </recordTypes>
    <recordTypes>
        <fullName>RIC_Produit_Fini_PERNOD</fullName>
        <active>true</active>
        <label>Produit Fini PERNOD</label>
    </recordTypes>
    <recordTypes>
        <fullName>RIC_Produit_Fini_RICARD</fullName>
        <active>true</active>
        <label>Produit Fini RICARD</label>
    </recordTypes>
    <recordTypes>
        <fullName>VRAC</fullName>
        <active>true</active>
        <label>VRAC</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RIC_ART_NameLength</fullName>
        <active>true</active>
        <description>Contrainte interface : 30 caractères max</description>
        <errorConditionFormula>NOT($User.BypassVR__c)
&amp;&amp; LEN(Name)&gt;30</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>La Description ne doit pas dépasser 30 caractères</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RIC_Only_RCTA_Can_Edit</fullName>
        <active>true</active>
        <description>A validation rule that block modifications of an Article with the Status &quot;Crée&quot;</description>
        <errorConditionFormula>NOT($User.BypassVR__c)
&amp;&amp; IF(RIC_Editable__c = false , true , false)  &amp;&amp; NOT($Permission.RIC_RCTA)</errorConditionFormula>
        <errorMessage>La modification d&apos;un article en statut créé est réservée au RCTA</errorMessage>
    </validationRules>
</CustomObject>